--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
         <link rel=stylesheet href="index.css" >
     </head>
     <body> 
-        <div class="header">Header</div>
-        <br>
+        <div class="header1">Header</div><br>
+        <div class="header2">Navigation Menu</div> 
         <h1>
         <div>
         <div class="container" style="text-align: center">Content</div>
-        <div class="container1" style="text-align: center">Content</div>
+        <div class="container1" style="text-align: center"> Main Content</div>
         <div class="container" style="text-align: center">Content</div>
        </div>
         </h1>
-        <br>
-        <div class="header">Footer</div>
+        <div class="header3">Footer</div>
  </body>
 </html>
 
